@@ -1,70 +1,23 @@
 # lc
 
-lc log:
-
 ------------------------------------------------------------------
-date:
-
-
-------------------------------------------------------------------
-date: 06/25/2023
-
-problems:
-  - 7. Reverse Integer [here](https://leetcode.com/problems/reverse-integer/description/)
-  - 8. String to Integer (atoi) https://leetcode.com/problems/string-to-integer-atoi/
-
+lc: https://github.com/timxor/lc
 ------------------------------------------------------------------
 
 
-
-
-------------------------------------------------------------------
-this repo:
-https://github.com/timxor/lc
 ------------------------------------------------------------------
 
+```
+sdk list java
+sdk use java 21-amzn
+sdk default java 21-amzn
+java --version
+```
 
 
+``` 
+javac --release 21 --enable-preview Review.java
+java --enable-preview Review
+```
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-------------------------------------------------------------------
-old
-------------------------------------------------------------------
-
-
-- Graph [(sub-topics)](./Graph/README.md)
-  - BFS [{problems}](./Graph/BFS/README.md)
-    - a
-    - b
-    - c
-  - DFS [{problems}](./Graph/DFS/README.md)
-    - a
-    - b
-    - c
-  - Topological Sort [(sub-topics)](./Graph/TopologicalSort/README.md)
-    - Is Alien Sorted [[code]](./Graph/TopologicalSort/IsAlienSorted.java)
-    - b
-    - c
-  - d
-    - 1
-    - 2
-    - 3
 
